--- a/Makefile.sun
+++ b/Makefile.sun
@@ -1,5 +1,5 @@
-gXipmsg : main.o udp.o pack.o appIcon.o sendForm.o recvDialog.o
-	cc -g -o gXipmsg main.o udp.o pack.o appIcon.o sendForm.o recvDialog.o -lXm -lXt -lSM -lICE -lX11 -lsocket -lnsl
+gXipmsg : main.o udp.o pack.o appIcon.o sendDialog.o recvDialog.o
+	cc -g -o gXipmsg main.o udp.o pack.o appIcon.o sendDialog.o recvDialog.o -lXm -lXt -lSM -lICE -lX11 -lsocket -lnsl
              
 main.o : main.c gXipmsg.h
 	cc -g -c main.c
@@ -13,8 +13,8 @@ pack.o : pack.c pack.h
 appIcon.o : appIcon.c appIcon.h 
 	cc -g -c appIcon.c
 
-sendForm.o : sendForm.c sendForm.h 
-	cc -g -c sendForm.c
+sendDialog.o : sendDialog.c sendDialog.h 
+	cc -g -c sendDialog.c
 
 recvDialog.o : recvDialog.c recvDialog.h 
 	cc -g -c recvDialog.c
